--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ArjunaAcchaDipa/arjunaacchadipa.github.io",
   "name": "react-portfolio-template",
   "private": true,
   "description": "Portfolio Template For Awesome Peoples",
@@ -24,13 +25,17 @@
     "react-scroll": "^1.8.1"
   },
   "devDependencies": {
-    "prettier": "2.1.2"
+    "gh-pages": "^3.2.3",
+    "prettier": "2.1.2",
+    "react-scripts": "4.0.3"
   },
   "keywords": [
     "gatsby"
   ],
   "license": "0BSD",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
