fixing package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ArjunaAcchaDipa/arjunaacchadipa.github.io",
+  "homepage": "https://ArjunaAcchaDipa.github.io",
   "name": "react-portfolio-template",
   "private": true,
   "description": "Portfolio Template For Awesome Peoples",
